--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <title>Real time Character Counter</title>
 </head>
 <body>
-<h2>Real time Character Counter</h2>
+<div class="container">
+    <h2>Real time Character Counter</h2>
 <textarea id="textarea" class="textarea" maxlength="50"></textarea>
 <div class="counter-container">
     <p>Total Characters : <span class="total-counter" id="total-counter">30</span></p>
     <p>Remaining Characters : <span class="Remaining-counter" id="Remaining-counter">20</span></p>
 
 
+</div>
 </div>
 </body>
 <script src="app.js"></script>
