--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <textarea id="textarea" class="textarea" maxlength="50"></textarea>
 <div class="counter-container">
     <p>Total Characters : <span class="total-counter" id="total-counter">30</span></p>
-    <p>Remaining Characters : <span class="Remaining-counter" id="Remaining-counter">20</span></p>
+    <p>Remaining Characters : <span class="remaining-counter" id="Remaining-counter">20</span></p>
 
 
 </div>
