--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h2>Real time Character Counter</h2>
 <textarea id="textarea" class="textarea" maxlength="50"></textarea>
 <div class="counter-container">
-    <p>Total Characters : <span class="total-counter" id="total-counter">30</span></p>
-    <p>Remaining Characters : <span class="remaining-counter" id="Remaining-counter">20</span></p>
+    <p>Total Characters : <span class="total-counter" id="total-counter">0</span></p>
+    <p>Remaining Characters : <span class="remaining-counter" id="remaining-counter">0</span></p>
 
 
 </div>
